--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,22 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>        
+         <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <scope>runtime</scope>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
                 
     </dependencies>
 	
